# dip

./: .gitignore  README.md
ColorTransform/: CMakeLists.txt  ColorTransform.sln  ColorTransform.vcxproj  ColorTransform.vcxproj.filters
Convolution/: CMakeLists.txt  Convolution.sln  Convolution.vcxproj  Convolution.vcxproj.filters  Convolution1D.cpp  Convolution1D.h  Convolution2D.cpp  Convolution2D.h  Main.cpp  Utils.h
EdgeDetection/: EdgeDetection.sln  EdgeDetection.vcxproj  EdgeDetection.vcxproj.filters
FilterImageSpatialDomain/: CMakeLists.txt  FilterImageSpatialDomain.sln  FilterImageSpatialDomain.vcxproj  FilterImageSpatialDomain.vcxproj.filters
FourierTransform/: CMakeLists.txt  FourierTransform.sln  FourierTransform.vcxproj  FourierTransform.vcxproj.filters
GeometricTransform/: CMakeLists.txt  GeometricTransform.sln  GeometricTransform.vcxproj  GeometricTransform.vcxproj.filters
ImageCompression/: CMakeLists.txt  ImageCompression.sln  ImageCompression.vcxproj  ImageCompression.vcxproj.filters
ImageSegementation/: CMakeLists.txt  ImageSegementation.sln  ImageSegementation.vcxproj  ImageSegementation.vcxproj.filters
ImageSegementation/src/: Application.cpp  Converter.cpp  Converter.h  Kmean.cpp  Kmean.h  Threshold.cpp  Threshold.h  Ultils.h  cv_include.h
Luminance/: CMakeLists.txt  Luminance.sln  Luminance.vcxproj
Test_OpenCV_CUDA/: Main.cpp  Test_OpenCV_CUDA.sln  Test_OpenCV_CUDA.vcxproj
color-transform/: color_transform.ipynb  fuck.py
edge-detection/: edge_detection.ipynb  edge_detection_using_canny.ipynb
image-segmentation/: k_mean.ipynb  (+2 more)
(+54 files in other folders)
